header text fix on mobile

--- a/style.css
+++ b/style.css
@@ -449,11 +449,11 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     .header-text{
-        margin-top: 100%;
-        font-size: 16px;
+        margin-top: 50%;
+        font-size: 20px;
     }
     .header-text h1{
-        font-size: 30px;
+        font-size: 35px;
     }
     nav .fa-solid{
         display: block;
